Mon Jun 28 09:53:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* AuthenticationBase.cpp:
	* AuthenticationBase.h:
	* AuthenticationBase.inl:
	* FTP_ClientRequestHandler.cpp:
	* FTP_ClientRequestHandler.h:
	* FTP_ClientRequestHandler.inl:
	* FTP_IOStream.cpp:
	* FTP_IOStream.h:
	* FTP_IOStream.inl:
	* FTP_Request.cpp:
	* FTP_Request.h:
	* FTP_Request.inl:
	* FTP_Response.cpp:
	* FTP_Response.h:
	* FTP_Response.inl:
	* FTP_Session.cpp:
	* FTP_Session.h:
	* FTP_Simple_exec.cpp:
	* FTP_URL.cpp:
	* FTP_URL.h:
	* FTP_URL.inl:
	* INet_Log.cpp:
	* INet_Log.h:
	* ConnectionCache.cpp:
	* HeaderBase.cpp:
	* HTTP_ClientRequestHandler.cpp:
	* HTTP_ClientRequestHandler.h:
	* HTTP_Request.cpp:
	* HTTP_Response.cpp:
	* HTTP_Session.cpp:
	* HTTP_Simple_exec.cpp:
	* StreamHandler.cpp:
	* URLBase.cpp:
	* URLBase.h:
	* inet.mpc:
	  Added library specific logging and logging macros. Use INET_LOG_LEVEL
	  environment variable to control.
	  Added FTP URL and protocol (clientside) support.
	  Added basic authentication handling (currently only used with FTP).
	  Some minor cleanup and fixes.

Fri Jun 24 19:10:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* HTTP_Simple_exec.cpp:
	  Small fixes, clean up.

	* HTTP_Session.cpp:
	* HTTP_Session.h:
	  Added ctor.

	* StreamHandler.cpp:
	* StreamHandler.h:
	  Fixed blocking problem.
    
	* String_IOStream.cpp:
	  Flush data on dtor.

	* URLBase.h:
	  Added clearification.

Fri Jun 24 16:24:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* bin/MakeProjectCreator/config/inet.mpb:
	  Added missing avoids.

Thu Jun 24 08:52:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.mpc:
          Use dynamicflags += instead of dynamicflags =

Thu Jun 24 02:07:18 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Service_Gestalt.inl (open): Allow the command line options to
          override the passed ignore_static_svcs argument. Restores correct
          operation, fixing Bugzilla #3865.
