@@ -109,5 +109,9 @@ namespace ACE
 
 ACE_END_VERSIONED_NAMESPACE_DECL
 
+#if defined (__ACE_INLINE__)
+#include "ace/INet/FTP_Request.inl"
+#endif
+
 #include /**/ "ace/post.h"
 #endif /* ACE_FTP_REQUEST_H */
