@@ -1,3 +1,9 @@
+Mon Jun 28 10:37:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* FTP_Request.h:
+	* FTP_Response.h:
+	  Added missing inline includes.
+
 Mon Jun 28 09:53:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* AuthenticationBase.cpp:
